기본 내용 번역

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,8 @@
   <header class="sidebar__logo" role="banner">
     <a href="{{ "/" | prepend: site.baseurl }}">Liquid</a>
   </header>
-  <nav class="sidebar__nav"> {% assign sections = "basics, tags, filters" | split: ", " %}
+  <nav class="sidebar__nav"> 
+  {% assign sections = "basics, tags, filters" | split: ", " %}
 
     {% for section in sections %}
     <h3 class="section__header">{{ section | capitalize }}</h3>
