--- a/_includes/home-banner.html
+++ b/_includes/home-banner.html
@@ -1,12 +1,12 @@
 <div class="home-banner">
   <h1>Liquid</h1>
-  <p>Safe, customer-facing template language for flexible web apps.</p>
+  <p>유연한 웹 앱을 위한 안전하고 고객 지향적인 템플릿 언어</p>
   <p class="btn-row">
     <a href="https://github.com/Shopify/liquid/archive/master.zip" target="_blank" class="btn">
-      <span aria-hidden="true">{% include icons/desktop-download.svg %}</span> Download
+      <span aria-hidden="true">{% include icons/desktop-download.svg %}</span> 다운로드
     </a>
     <a href="https://github.com/Shopify/liquid" target="_blank" class="btn">
-      <span aria-hidden="true">{% include icons/mark-github.svg %}</span> View on GitHub
+      <span aria-hidden="true">{% include icons/mark-github.svg %}</span> GitHub에서 보기
     </a>
   </p>
 </div>
