--- a/_includes/home-users-grid.html
+++ b/_includes/home-users-grid.html
@@ -21,4 +21,4 @@
   </div>
 </div>
 
-<p class="home-users-blurb">...and <a href="https://github.com/Shopify/liquid/wiki#who-uses-liquid" target="_blank">many more</a></p>
+<p class="home-users-blurb">...그 외 <a href="https://github.com/Shopify/liquid/wiki#who-uses-liquid" target="_blank">더 많은 사이트들</a></p>
