--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,13 +3,15 @@
     <a href="{{ "/" | prepend: site.baseurl }}">Liquid</a>
   </header>
   <nav class="sidebar__nav"> 
-  {% assign sections = "basics, tags, filters" | split: ", " %}
+  {% assign sections = "basics:기본, tags:태그, filters:필터" | split: ", " %}
 
     {% for section in sections %}
-    <h3 class="section__header">{{ section | capitalize }}</h3>
+
+    {% assign sec = section | split: ":" %}
+    <h3 class="section__header">{{ sec[1] | capitalize }}</h3>
 
     <ul class="section__links">
-    {% for item in site.pages %}{% if item.url contains section/ %}{% unless item.path contains "index" %}
+    {% for item in site.pages %}{% if item.url contains sec[0]/ %}{% unless item.path contains "index" %}
       <li><a href="{{ item.url | prepend: site.baseurl }}" class="section__link{% if item.url contains page.url and page.url != '/' and page.type != 'index' %} section__link--is-active{% endif %}">{{ item.title }}</a></li>
     {% endunless %}{% endif %}{% endfor %}
     </ul>
